# iam-governance-lifecycle-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  scenario.py
iam_simulator/: __init__.py  core.py  events.py  rbac.py
